# DAHD

./: .gitignore  README.md  paper_draft.html  paper_draft.md  paper_draft_tmp.html  pyproject.toml  requirements.txt
checkpoints/: validation_results.json
configs/: phase1_profiling.yaml
experiments/: __init__.py
experiments/phase1_profiling/: __init__.py  analyze_bimodal.py  rerun_analysis.py  run_acceptance_profiling.py  run_bimodal_test.py  run_eagle3_full_profiling.py  run_eagle3_profiling.py  run_multi_task_profiling.py  run_phase1_validation.py
experiments/phase2_architecture/: __init__.py  gen_val_only.py  generate_large_training_data.py  generate_training_data.py  generate_training_data_large.py  train_dual_branch.py  train_gumiho_heads.py  train_gumiho_heads_large.py  train_gumiho_large.py  train_hydra_parallel.py  train_medusa_heads.py  train_medusa_heads_large.py  train_medusa_large.py
experiments/phase4_e2e/: __init__.py  analyze_v2_results.py  run_dahd_e2e_eval.py  run_e2e_benchmark.py  run_e2e_comparison.py  run_e2e_with_large_gumiho.py  run_e2e_with_large_medusa.py  run_medusa_e2e_comparison.py
experiments/phase5_ablations/: __init__.py  run_all_ablations.py
results/multi_task_difficulty/: per_task_stats.json  rerun_analysis.py
results/phase1_results/: bimodal_analysis_summary.json  distribution_analysis.json  per_sequence_summary.json  profiling_log.txt
results/phase1_results_v2/: bimodal_analysis.json  per_step_summary.json
results/phase4_e2e/: regen_log.txt  (+10 more)
src/: __init__.py  config.py
tests/: conftest.py  test_correctness.py
(+44 files in other folders)
